--- a/views/example.pug
+++ b/views/example.pug
@@ -5,8 +5,8 @@ mixin tweet(source, text, date)
         div.source=source
         if text.match(/great/i)
             div.text.great=text
-        else if text.match(/sad/i)
-            div.text.fat=text
+        else if text.match(i/sad/i)
+            div.text.sad=text
         else
             div.text=text
         div.date=date
@@ -15,5 +15,3 @@ mixin tweet(source, text, date)
 block content
     each val in tweets
         +tweet(val.source, val.text, val.created_at)
-
-    
