--- a/views/example.pug
+++ b/views/example.pug
@@ -5,7 +5,7 @@ mixin tweet(source, text, date)
         div.source=source
         if text.match(/great/i)
             div.text.great=text
-        else if text.match(i/sad/i)
+        else if text.match(/sad/i)
             div.text.sad=text
         else
             div.text=text
